<resources>
    <string name="app_name">Procurando Locais</string>
    <string name="Nome">Digite seu Nome:</string>
    <string name="Endereco">Digite seu endereço:</string>
    <string name="Telefone">Digite o telefone do local:</string>
    <string name="Posicao">Digite a Posição do local desejado:</string>
    <string name="TipoLocal">Informe o Tipo de local:</string>
    <string name="Descricao">Informe a descrição do local desejado:</string>
    <string name="OK">OK</string>
    <string name="FalhaPermissoes">Habilitar permissões para usar app.</string>

    <!--<string-array name="estados">-->
        <!--<item>Tipo de local</item>-->
        <!--<item>Restaurante</item>-->
        <!--<item>Lanchonete</item>-->
        <!--<item>Bar</item>-->
        <!--<item>Mercado</item>-->
        <!--<item>Casa</item>-->
        <!--<item>Hospital</item>-->
        <!--<item>Farmácia</item>-->
        <!--<item>Outros</item>-->
        <!--&lt;!&ndash;<item>ES</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>GO</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>MA</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>MT</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>MS</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>MG</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>PA</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>PB</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>PR</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>PE</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>PI</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>RJ</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>RN</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>RS</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>RO</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>RR</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>SC</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>SP</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>SE</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>TO</item>&ndash;&gt;-->
    <!--</string-array>-->
</resources>
