<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data.webservice.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            tools:context=".Data.webservice.CadastroActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xxNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Nome"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:nextFocusDown="@id/xxEndereco" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xxEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EdEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Endereco"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xxTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EdTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Telefone"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xxLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EdLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Posicao"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xxLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EdLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Posicao"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xxDescricao"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EdDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Descricao"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:nextFocusDown="@id/Locais" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:id="@+id/Locais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/estados"
                android:prompt="@string/TipoLocal" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_check_black" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDeletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fabConfirmar"
        app:srcCompat="@drawable/ic_delete_forever_black" />

</android.support.constraint.ConstraintLayout>